force-app/main/default/objects/FixMyStreet_Photo__c/FixMyStreet_Photo__c.object-meta.xml
<CustomObject>
    <description>List of photos</description>
    <label>FixMyStreet Photo</label>
    <nameField>
        <displayFormat>FMSP-{0000}</displayFormat>
        <label>FixMyStreet Photo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FixMyStreet Photos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>