force-app/main/default/objects/FixMyStreet_Photo__c/fields/FixMyStreet__c.field-meta.xml
<CustomField>
    <fullName>FixMyStreet__c</fullName>
    <label>FixMyStreet</label>
    <referenceTo>FixMyStreet__c</referenceTo>
    <relationshipLabel>FixMyStreet Photos</relationshipLabel>
    <relationshipName>FixMyStreet_Photos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>