force-app/main/default/objects/FixMyStreet_Photo__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>HYPERLINK( Photo_Link__c , IMAGE( Photo_Link__c , &quot;FixMyStreetImage&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>