force-app/main/default/objects/FixMyStreet_Photo__c/fields/Photo_Link__c.field-meta.xml
<CustomField>
    <fullName>Photo_Link__c</fullName>
    <label>Photo_Link</label>
    <type>Url</type>
</CustomField>