force-app/main/default/objects/FixMyStreet_Photo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Photo_Link__c</columns>
    <columns>Image__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>